<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="NoCallId">Unknown</string>
    <string name="abbrev_wday_month_day_year">EEE, MMM d, yyyy</string>
    <string name="about">Version ${VERSION}</string>
    <string name="account_csl_prepaid_topup_call_text">By calling 179179</string>
    <string name="account_hello_prepaid_topup_call_text">By calling 1833808</string>
    <string name="account_normal_prepaid_topup_call_text">By calling 1833803</string>
    <string name="account_prepaid_balance">Account balance</string>
    <string name="account_prepaid_msisdn">Mobile number</string>
    <string name="account_prepaid_topup_online_text">Via online</string>
    <string name="account_prepaid_topup_title">Recharge</string>
    <string name="account_prepaid_update_time">Update time</string>
    <string name="actionbar_tab_addcall_title_contacts">Add Call (Contacts)</string>
    <string name="actionbar_tab_addcall_title_dial">Add Call</string>
    <string name="actionbar_tab_addcall_title_history">Add Call (Call Log)</string>
    <string name="actionbar_tab_title_contacts">Contacts</string>
    <string name="actionbar_tab_title_history">Call Log</string>
    <string name="actionbar_tab_title_more">More</string>
    <string name="add_ssid_list_already_exist">This SSID already exists</string>
    <string name="add_ssid_list_full">Auto connection SSID list is full</string>
    <string name="add_ssid_list_removed">SSID \"%1$s\" is removed</string>
    <string name="add_ssid_list_success">“KingKing” will switch on automatically when SSID \"%1$s\" is connected</string>
    <string name="am">am</string>
    <string name="app_name">KingKing</string>
    <string name="ask_wifi">Please check if your handset is connecting to the Internet via Wi-Fi.</string>
    <string name="auto_login_dialog_confirm_dialog_message">Confirm you want to save SSID \"%1$s\"?</string>
    <string name="auto_login_dialog_current_ssid">Add current SSID</string>
    <string name="auto_login_dialog_subtitle">Saved auto connection SSID list</string>
    <string name="auto_login_dialog_title">Auto-connect</string>
    <string name="auto_login_dialog_title_description">\"KingKing\" will switch on automatically when selected SSID is connected.</string>
    <string name="banner_text">KingKing is now connected</string>
    <string name="bar_phone_no">This phone number is not allowed to connected via KingKing</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="button_text_enter">Enter</string>
    <string name="call_log_filter_all">All</string>
    <string name="call_log_filter_call_log">Call Logs</string>
    <string name="call_log_filter_message">Message</string>
    <string name="call_log_grouped_incoming_call">INCOMING CALL</string>
    <string name="call_log_grouped_missed_call">MISSED CALL</string>
    <string name="call_log_grouped_outgoing_call">OUTGOING CALL</string>
    <string name="call_log_grouped_title">Call Logs</string>
    <string name="call_log_grouped_unknown_call">UNKNOWN CALL</string>
    <string name="call_log_popup_individual_delete_chat">Delete Chat</string>
    <string name="cancel">Cancel</string>
    <string name="card_title_call_ended">Call ended</string>
    <string name="card_title_dialing">Dialing…</string>
    <string name="card_title_in_progress">Current Call</string>
    <string name="card_title_incoming_call">"Incoming
Call"</string>
    <string name="card_title_on_hold">On hold</string>
    <string name="card_title_resuming">Resuming</string>
    <string name="chat_action_attachment_title_select_photo">Select Photo</string>
    <string name="chat_action_menu_delete">Delete</string>
    <string name="chat_date_today">Today</string>
    <string name="chat_demo_time">23:45</string>
    <string name="chat_detail_username">Number</string>
    <string name="chat_group_add_more_default_msg">All friends are inside the group now</string>
    <string name="chat_group_create_new_contact">Create New Contact</string>
    <string name="chat_group_msg_recording_audio">Release to send, slide to cancel.</string>
    <string name="chat_group_profile_actionbar_back_button_caption">Recipients</string>
    <string name="chat_group_profile_add_participant">Add participant</string>
    <string name="chat_group_profile_admin">Admin</string>
    <string name="chat_group_profile_create_group_info_fail">Failed to create group</string>
    <string name="chat_group_profile_create_group_info_name_and_pic_success">Successfully created group</string>
    <string name="chat_group_profile_create_group_info_name_success_only">Successfully created group, but failed to update group profile picture</string>
    <string name="confirm_registration_title">One-time registration</string>
    <string name="enhanced_prepaid_registration_mobile_number">Mobile Number</string>
    <string name="enhanced_prepaid_registration_notic">*If you are a PCCW-HKT Rechargeable SIM Card/KingKing prepaid account user, please enter your prepaid mobile number</string>
    <string name="enhanced_prepaid_registration_text">Please enter the mobile number you use for KingKing service</string>
    <string name="group_profile_current_status">Group Status</string>
    <string name="group_profile_name">Group name</string>
    <string name="group_profile_profile_pic">Group Profile Picture</string>
    <string name="group_profile_update">Start Chat</string>
    <string name="menu_about">About</string>
    <string name="menu_auto_login">Auto-connect</string>
    <string name="menu_codec_ilbc">Use iLBC Codecs (Note：Some handset models may not support this setting)</string>
    <string name="menu_facebook_logout">Logout Facebook</string>
    <string name="menu_facebook_share">Share to Facebook</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_general_catalog">General</string>
    <string name="menu_screen">Keep screen on during phone calls</string>
    <string name="menu_sms_invite">Share via SMS</string>
    <string name="menu_switch_account">Switch Account</string>
    <string name="menu_user_guide">User Guide</string>
    <string name="more_turn_on_to_check_balanace">Please connect to KingKing via Wi-Fi connectivity to get an updated account balance</string>
    <string name="prepaid_account_info_title">Rechargeable Account</string>
    <string name="submit">Submit</string>
    <string name="terms_n_conditions_title">"KingKing 
Terms and Conditions"</string>
</resources>