<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/splash_screen_background_gradient" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <ImageView android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_logo" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/confirm_registration_title" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/enhanced_prepaid_registration_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:layout_marginTop="30.0dip" android:text="@string/enhanced_prepaid_registration_text" />
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/enhanced_prepaid_registration_msisdn" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="4.0dip" android:text="@string/enhanced_prepaid_registration_mobile_number" android:textAllCaps="true" />
    <EditText android:textColor="@android:color/black" android:id="@id/enhanced_prepaid_registration_msisdn_input" android:background="@drawable/chat_field_background" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:maxLength="20" android:inputType="phone">
        <requestFocus />
    </EditText>
    <LinearLayout android:id="@id/enhanced_prepaid_registration_button_linearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
        <Button android:textColor="#ffffffff" android:id="@id/enhanced_prepaid_registration_submit_button" android:background="@drawable/selector_action_button" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:text="@string/submit" android:layout_weight="1.0" />
        <Button android:textColor="#ffffffff" android:id="@id/enhanced_prepaid_registration_cancel_button" android:background="@drawable/selector_action_button" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="20.0sp" android:id="@id/menu_general_category" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/enhanced_prepaid_registration_notic" />
</LinearLayout>