<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layoutParent" android:background="@drawable/background_gradient_white" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:font="http://schemas.android.com/apk/res-auto">
    <ScrollView android:paddingTop="@dimen/actionbar_padding_top_height" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/parent" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.pccw.android.common.widget.TypefacedTextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/groupprofilePicLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="16.0dip" android:text="@string/group_profile_profile_pic" font:typeface="RobotoCondensed-Regular.ttf" />
            <com.pccw.android.common.widget.CircularImageView android:id="@id/groupprofileImage" android:layout_width="75.0dip" android:layout_height="75.0dip" android:layout_margin="8.0dip" android:src="@drawable/default_profile_pic" />
            <com.pccw.android.common.widget.TypefacedTextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/groupnamelabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/group_profile_name" font:typeface="RobotoCondensed-Regular.ttf" />
            <com.pccw.android.common.widget.EditTextViewWithNumberCount android:id="@id/groupname" android:background="@drawable/chat_field_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" font:countSize="30" font:singleline="true" />
            <com.pccw.android.common.widget.TypefacedTextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/groupstatuslabel" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/group_profile_current_status" font:typeface="RobotoCondensed-Regular.ttf" />
            <EditText android:id="@id/groupstatus" android:background="@drawable/chat_field_background" android:paddingLeft="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:maxLines="1" android:singleLine="true" android:fontFamily="sans-serif" />
        </LinearLayout>
    </ScrollView>
    <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/groupprofileUpdate" android:background="@drawable/selector_action_button" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/group_profile_update" android:layout_weight="0.0" android:textAllCaps="true" />
</LinearLayout>